    - Renamed recipes and entities containing the word "coal" #252
    - Compatibility changes for Bob's mods 1.1.5 #262
  Bugfixes:
    - Lab 2 could not be researched (without SCT) #244
    - Error when using custom colors for tiers with Artisanal Reskins #251
    - Some disabled techs were not being hidden #252
    - Fixed setting "SpaceX ignore tech price multiplier" #256
---------------------------------------------------------------------------------------------------
Version: 0.5.10
Date: 30.12.2021
  Bugfixes:
    - Lithium Processing could not be researched #246
---------------------------------------------------------------------------------------------------
Version: 0.5.9
Date: 19.12.2021
  Changes:
    - Added setting to give each player their own set of starting items #242
    - Compatibility changes for latest Angel's mods #210
    - Increased output of Thermal water bore from 5 to 20 Thermal water #241
  Bugfixes:
    - Fixed Chlorine Processing 4 tech cost #210
---------------------------------------------------------------------------------------------------
Version: 0.5.8
Date: 05.12.2021
  Changes:
    - Added Companion Drones compatibility #108
    - Wood bricks now have a fuel value of 18MJ #216
    - Adjusted Plasma turret recipes #218
    - Moved perchlorate recipes to new tech Chlorine Processing 4 #218
    - Advanced farming recipes now require specialized farms #226
    - Adjusted farming tech prerequisites #226
    - Other minor tweaks #220
    - Science Cost Tweaker: #232
      - All green science intermediates are craftable in an Electronics assembling machine
      - Removed Sulfur lightsource from blue science
    - Rebalanced Sniper turret tech cost #236
  Bugfixes:
    - Recipes for Bob's pollution cleaning and pollution producing boards were being hidden even if Circuit Processing was disabled #215
    - Recipes for Lithium and Lithium perchlorate were showing Bob's electroliser in FNEI #224