@@ -1,6 +1,6 @@
 if mods['SpaceMod'] then
-  if settings.startup["SpaceX-ignore-tech-multiplier"] then
-    if settings.startup["SpaceX-ignore-tech-multiplier"].value then
+  if settings.startup['SpaceX-ignore-tech-multiplier'] then
+    if settings.startup['SpaceX-ignore-tech-multiplier'].value then
       for _, tech_name in pairs({
         'ftl-theory-A',
         'ftl-theory-B',
@@ -37,5 +37,16 @@ if mods['SpaceMod'] then
         end
       end
     end
+  end
+
+  if settings.startup['bobmods-logistics-disableroboports'] and settings.startup['bobmods-logistics-disableroboports'].value then
+    bobmods.lib.recipe.remove_ingredient('drydock-assembly', 'roboport')
+    bobmods.lib.recipe.add_ingredients('drydock-assembly',
+      {
+        {type = 'item', name = 'bob-robochest', amount = 10},
+        {type = 'item', name = 'bob-logistic-zone-expander', amount = 10},
+        {type = 'item', name = 'bob-robo-charge-port-large', amount = 10}
+      }
+    )
   end
 end
